--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testing",
+  "name": "hakathon-byrafi",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.4.5",
-    "@types/react": "18.2.16",
-    "@types/react-dom": "18.2.7",
+    "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.12",
+    "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
-    "postcss": "8.4.27",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "eslint": "8.42.0",
+    "eslint-config-next": "13.4.5",
+    "lucide-react": "^0.244.0",
+    "next": "13.4.5",
+    "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "react-icons": "^4.9.0",
+    "react-redux": "^8.1.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^1.13.1",
+    "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.6",
+    "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10",
+    "daisyui": "^3.1.0"
   }
 }
