--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.9.0",
     "react-redux": "^8.1.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^1.13.1",
     "tailwindcss": "3.3.2",
